--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section class="left-panel">
       <form id="task-form">
         <h3>Add Tasks</h3>
+           <h3>Add Tasks</h3>
         <label for="task-title">Task Title <span style="color: red">*</span></label>
         <input type="text" id="task-title" required placeholder="Enter task title" />
   
